src/index.css
@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;1,100&display=swap");

@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  font-family: "Open Sans", sans-serif;
}

.main {
  margin: 0;
  padding: 0;
  /* Adjust the path accordingly */
  background-image: url("./assets/home/home.jpg");
  background-size: cover;
  background-position: center;
  background-repeat: no-repeat;
}

body {
  width: 100%;
  height: 100%;
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

.player-wrapper {
  position: relative;
  padding-top: 56.25%;
  /* 720 / 1280 = 0.5625 */
}

.react-player {
  position: absolute;
  top: 0;
  left: 0;
}

.swiper {
  /* max-width: 95vw !important; */
  /* margin-left: 5rem !important; */
  max-height: 700px !important;
  height: 100%;
}

.loading-spinner circle {
  fill: transparent;
  stroke: #0ac8a6;
  stroke-width: 8; /* Adjust the stroke width as needed */
  stroke-linecap: round;
  stroke-dasharray: 239; /* (2 * PI * radius) - for radius of 76 */
  animation: dash 1s linear infinite; /* Adjust the animation duration as needed */
  transform-origin: center;
}

@keyframes dash {
  50% {
    transform: rotate(180deg);
  }
  100% {
    transform: rotate(360deg);
  }
}

